hw5 (#5)
* add hw 5